# kinga

./: Makefile  README.md  go.mod
cmd/kinga-dev/: main.go
python/: pyproject.toml
ts/: package.json
