[project]
name = "kingaai-kinga"
version = "0.0.1"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
description = "kinga library"
[project.dependencies]\nkingaai-core = {url = "https://github.com/kinga-ai/kinga-core/archive/refs/tags/v0.1.0.tar.gz"}\nkweli = {url = "https://github.com/kinga-ai/kweli/archive/refs/heads/main.tar.gz"}\n
